verif/test/deca/context/invalid/initialization/separated-dec-init-verif.res
src/test/deca/context/invalid/initialization/separated-dec-init.deca:12:8: Cannot assign expression of type 'boolean' to a variable of type 'int'
